syntax = "proto3";

package smartlinkdrive.user.v1;

option go_package = "github.com/SmartLinkDrive/SmartLinkDrive/internal/api/proto/user;userpb";

// 用户实体
message User {
  string id = 1;
  string username = 2;
  string password_hash = 3;
  string nickname = 4;
  string phone = 5;
  string email = 6;
  repeated string roles = 7;
  int64 created_at = 8;
  int64 updated_at = 9;
}

// 注册
message RegisterUserRequest {
  string username = 1;
  string password = 2;
  string nickname = 3;
  string phone = 4;
  string email = 5;
}

message RegisterUserResponse {
  User user = 1;
}

// 登录
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  int64 expires_at = 2;
  User user = 3;
}

// 获取当前用户信息
message GetProfileRequest {}

message GetProfileResponse {
  User user = 1;
}

// 查询用户列表（仅管理员）
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int64 total = 2;
}

service UserService {
  // 用户注册
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);

  // 用户登录，返回 JWT
  rpc Login(LoginRequest) returns (LoginResponse);

  // 获取当前登录用户信息（需要带 token）
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);

  // 管理员查询用户列表
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

